Fix vertical alignment of home page team icons
Fixes https://github.com/WordPress/wporg-make/issues/39

--- a/source/wp-content/themes/wporg-make-2024/src/style/style.scss
+++ b/source/wp-content/themes/wporg-make-2024/src/style/style.scss
@@ -36,6 +36,11 @@
 			display: flex;
 			align-items: flex-start;
 			gap: 5px;
+			line-height: 24px;
+
+			a {
+				line-height: inherit;
+			}
 
 			&::before {
 				display: block;
@@ -44,7 +49,7 @@
 				content: "\f109";
 				font-weight: 400;
 				font-size: 20px;
-				line-height: 24px;
+				line-height: inherit;
 				width: 24px;
 				text-align: center;
 				-webkit-font-smoothing: antialiased;
@@ -146,12 +151,10 @@
 				width: 24px;
 				height: 24px;
 				mask-repeat: no-repeat;
-				mask-position: bottom;
+				mask-position: center;
 				mask-size: 28px;
 				display: inline-block;
 				background-color: currentColor;
-				vertical-align: top;
-				margin-right: 0;
 			}
 		}
 
